Parser/ParLatte.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.3).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Parser.ParLatte
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Parser.AbsLatte
import Parser.LexLatte

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'       { PT _ (TS _ 1)  }
  '!='      { PT _ (TS _ 2)  }
  '%'       { PT _ (TS _ 3)  }
  '&&'      { PT _ (TS _ 4)  }
  '('       { PT _ (TS _ 5)  }
  ')'       { PT _ (TS _ 6)  }
  '*'       { PT _ (TS _ 7)  }
  '+'       { PT _ (TS _ 8)  }
  '++'      { PT _ (TS _ 9)  }
  ','       { PT _ (TS _ 10) }
  '-'       { PT _ (TS _ 11) }
  '--'      { PT _ (TS _ 12) }
  '.'       { PT _ (TS _ 13) }
  '/'       { PT _ (TS _ 14) }
  ':'       { PT _ (TS _ 15) }
  ';'       { PT _ (TS _ 16) }
  '<'       { PT _ (TS _ 17) }
  '<='      { PT _ (TS _ 18) }
  '='       { PT _ (TS _ 19) }
  '=='      { PT _ (TS _ 20) }
  '>'       { PT _ (TS _ 21) }
  '>='      { PT _ (TS _ 22) }
  '['       { PT _ (TS _ 23) }
  '[]'      { PT _ (TS _ 24) }
  ']'       { PT _ (TS _ 25) }
  'boolean' { PT _ (TS _ 26) }
  'class'   { PT _ (TS _ 27) }
  'else'    { PT _ (TS _ 28) }
  'extends' { PT _ (TS _ 29) }
  'false'   { PT _ (TS _ 30) }
  'for'     { PT _ (TS _ 31) }
  'if'      { PT _ (TS _ 32) }
  'int'     { PT _ (TS _ 33) }
  'new'     { PT _ (TS _ 34) }
  'null'    { PT _ (TS _ 35) }
  'return'  { PT _ (TS _ 36) }
  'string'  { PT _ (TS _ 37) }
  'true'    { PT _ (TS _ 38) }
  'void'    { PT _ (TS _ 39) }
  'while'   { PT _ (TS _ 40) }
  '{'       { PT _ (TS _ 41) }
  '||'      { PT _ (TS _ 42) }
  '}'       { PT _ (TS _ 43) }
  L_Ident   { PT _ (TV _)    }
  L_integ   { PT _ (TI _)    }
  L_quoted  { PT _ (TL _)    }

%%

Ident :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Ident) }
Ident  : L_Ident { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Ident (tokenText $1)) }

Integer :: { (Parser.AbsLatte.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Parser.AbsLatte.BNFC'Position, String) }
String   : L_quoted { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Program) }
Program
  : ListTopDef { (fst $1, Parser.AbsLatte.Program (fst $1) (snd $1)) }

TopDef :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.TopDef) }
TopDef
  : FnDef { (fst $1, Parser.AbsLatte.TopFnDef (fst $1) (snd $1)) }
  | 'class' Ident '{' ListClassStmt '}' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ClassDef (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'class' Ident 'extends' Ident '{' ListClassStmt '}' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ClassExtDef (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.TopDef]) }
ListTopDef
  : TopDef { (fst $1, (:[]) (snd $1)) }
  | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

ClassStmt :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.ClassStmt) }
ClassStmt
  : FnDef { (fst $1, Parser.AbsLatte.FnProp (fst $1) (snd $1)) }
  | Type Ident ';' { (fst $1, Parser.AbsLatte.AttrProp (fst $1) (snd $1) (snd $2)) }

ListClassStmt :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.ClassStmt]) }
ListClassStmt
  : ClassStmt { (fst $1, (:[]) (snd $1)) }
  | ClassStmt ListClassStmt { (fst $1, (:) (snd $1) (snd $2)) }

FnDef :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.FnDef) }
FnDef
  : Type Ident '(' ListArg ')' Block { (fst $1, Parser.AbsLatte.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

Arg :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Arg) }
Arg
  : Type Ident { (fst $1, Parser.AbsLatte.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.Arg]) }
ListArg
  : {- empty -} { (Parser.AbsLatte.BNFC'NoPosition, []) }
  | Arg { (fst $1, (:[]) (snd $1)) }
  | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Block) }
Block
  : '{' ListStmt '}' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Block (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.Stmt]) }
ListStmt
  : {- empty -} { (Parser.AbsLatte.BNFC'NoPosition, []) }
  | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Stmt) }
Stmt
  : ';' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Empty (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | Block { (fst $1, Parser.AbsLatte.BStmt (fst $1) (snd $1)) }
  | Type ListItem ';' { (fst $1, Parser.AbsLatte.Decl (fst $1) (snd $1) (snd $2)) }
  | Expr '=' Expr ';' { (fst $1, Parser.AbsLatte.Ass (fst $1) (snd $1) (snd $3)) }
  | Ident '++' ';' { (fst $1, Parser.AbsLatte.Incr (fst $1) (snd $1)) }
  | Ident '--' ';' { (fst $1, Parser.AbsLatte.Decr (fst $1) (snd $1)) }
  | 'return' Expr ';' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Ret (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | 'return' ';' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.VRet (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'if' '(' Expr ')' Stmt { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Cond (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.CondElse (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
  | 'while' '(' Expr ')' Stmt { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.While (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
  | Expr ';' { (fst $1, Parser.AbsLatte.SExp (fst $1) (snd $1)) }
  | 'for' '(' Type Ident ':' Expr ')' Stmt { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.For (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $4) (snd $6) (snd $8)) }

Item :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Item) }
Item
  : Ident { (fst $1, Parser.AbsLatte.NoInit (fst $1) (snd $1)) }
  | Ident '=' Expr { (fst $1, Parser.AbsLatte.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.Item]) }
ListItem
  : Item { (fst $1, (:[]) (snd $1)) }
  | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Type) }
Type
  : 'int' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Int (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'string' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Str (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'boolean' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Bool (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'void' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Void (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | Type '[]' { (fst $1, Parser.AbsLatte.List (fst $1) (snd $1)) }
  | Ident { (fst $1, Parser.AbsLatte.ClassType (fst $1) (snd $1)) }

ListType :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.Type]) }
ListType
  : {- empty -} { (Parser.AbsLatte.BNFC'NoPosition, []) }
  | Type { (fst $1, (:[]) (snd $1)) }
  | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr6
  : Ident { (fst $1, Parser.AbsLatte.EVar (fst $1) (snd $1)) }
  | Integer { (fst $1, Parser.AbsLatte.ELitInt (fst $1) (snd $1)) }
  | 'true' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ELitTrue (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ELitFalse (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | 'new' Type '[' Expr ']' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ENewArr (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'new' Type { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ENewClass (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Ident '(' ListExpr ')' { (fst $1, Parser.AbsLatte.EApp (fst $1) (snd $1) (snd $3)) }
  | Expr6 '.' Ident '(' ListExpr ')' { (fst $1, Parser.AbsLatte.EPropApp (fst $1) (snd $1) (snd $3) (snd $5)) }
  | Expr6 '.' Ident { (fst $1, Parser.AbsLatte.EProp (fst $1) (snd $1) (snd $3)) }
  | Expr6 '[' Expr ']' { (fst $1, Parser.AbsLatte.EArrGet (fst $1) (snd $1) (snd $3)) }
  | '(' Ident ')' 'null' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.ENullCast (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | String { (fst $1, Parser.AbsLatte.EString (fst $1) (snd $1)) }
  | '(' Expr ')' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr5
  : '-' Expr6 { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Neg (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | '!' Expr6 { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Not (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr4
  : Expr4 MulOp Expr5 { (fst $1, Parser.AbsLatte.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr3
  : Expr3 AddOp Expr4 { (fst $1, Parser.AbsLatte.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr2
  : Expr2 RelOp Expr3 { (fst $1, Parser.AbsLatte.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
  | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr1
  : Expr2 '&&' Expr1 { (fst $1, Parser.AbsLatte.EAnd (fst $1) (snd $1) (snd $3)) }
  | Expr2 { (fst $1, (snd $1)) }

Expr :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.Expr) }
Expr
  : Expr1 '||' Expr { (fst $1, Parser.AbsLatte.EOr (fst $1) (snd $1) (snd $3)) }
  | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (Parser.AbsLatte.BNFC'Position, [Parser.AbsLatte.Expr]) }
ListExpr
  : {- empty -} { (Parser.AbsLatte.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.AddOp) }
AddOp
  : '+' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Plus (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '-' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Minus (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.MulOp) }
MulOp
  : '*' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Times (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '/' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Div (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '%' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.Mod (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (Parser.AbsLatte.BNFC'Position, Parser.AbsLatte.RelOp) }
RelOp
  : '<' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.LTH (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '<=' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.LE (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '>' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.GTH (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '>=' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.GE (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '==' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.EQU (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }
  | '!=' { (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1), Parser.AbsLatte.NE (uncurry Parser.AbsLatte.BNFC'Position (tokenLineCol $1))) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Parser.AbsLatte.Program
pProgram = fmap snd . pProgram_internal
}
