Parser/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser/ParLatte.y
-----------------------------------------------------------------------------

state 123 contains 1 shift/reduce conflicts.

rule 38 is unused
rule 39 is unused
rule 40 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> Stmt ListStmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Expr '=' Expr ';'                          (18)
	Stmt -> Ident '++' ';'                             (19)
	Stmt -> Ident '--' ';'                             (20)
	Stmt -> 'return' Expr ';'                          (21)
	Stmt -> 'return' ';'                               (22)
	Stmt -> 'if' '(' Expr ')' Stmt                     (23)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> Expr ';'                                   (26)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (27)
	Item -> Ident                                      (28)
	Item -> Ident '=' Expr                             (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	Type -> 'int'                                      (32)
	Type -> 'string'                                   (33)
	Type -> 'boolean'                                  (34)
	Type -> 'void'                                     (35)
	Type -> Type '[]'                                  (36)
	Type -> Ident                                      (37)
	ListType ->                                        (38)
	ListType -> Type                                   (39)
	ListType -> Type ',' ListType                      (40)
	Expr6 -> Ident                                     (41)
	Expr6 -> Integer                                   (42)
	Expr6 -> 'true'                                    (43)
	Expr6 -> 'false'                                   (44)
	Expr6 -> 'new' Type '[' Expr ']'                   (45)
	Expr6 -> Ident '(' ListExpr ')'                    (46)
	Expr6 -> Expr6 '.' Ident                           (47)
	Expr6 -> Expr6 '[' Expr ']'                        (48)
	Expr6 -> String                                    (49)
	Expr6 -> '(' Expr ')'                              (50)
	Expr5 -> '-' Expr6                                 (51)
	Expr5 -> '!' Expr6                                 (52)
	Expr5 -> Expr6                                     (53)
	Expr4 -> Expr4 MulOp Expr5                         (54)
	Expr4 -> Expr5                                     (55)
	Expr3 -> Expr3 AddOp Expr4                         (56)
	Expr3 -> Expr4                                     (57)
	Expr2 -> Expr2 RelOp Expr3                         (58)
	Expr2 -> Expr3                                     (59)
	Expr1 -> Expr2 '&&' Expr1                          (60)
	Expr1 -> Expr2                                     (61)
	Expr -> Expr1 '||' Expr                            (62)
	Expr -> Expr1                                      (63)
	ListExpr ->                                        (64)
	ListExpr -> Expr                                   (65)
	ListExpr -> Expr ',' ListExpr                      (66)
	AddOp -> '+'                                       (67)
	AddOp -> '-'                                       (68)
	MulOp -> '*'                                       (69)
	MulOp -> '/'                                       (70)
	MulOp -> '%'                                       (71)
	RelOp -> '<'                                       (72)
	RelOp -> '<='                                      (73)
	RelOp -> '>'                                       (74)
	RelOp -> '>='                                      (75)
	RelOp -> '=='                                      (76)
	RelOp -> '!='                                      (77)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'for'          { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'new'          { PT _ (TS _ 32) }
	'return'       { PT _ (TS _ 33) }
	'string'       { PT _ (TS _ 34) }
	'true'         { PT _ (TS _ 35) }
	'void'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	Type            rules 32, 33, 34, 35, 36, 37
	ListType        rules 38, 39, 40
	Expr6           rules 41, 42, 43, 44, 45, 46, 47, 48, 49, 50
	Expr5           rules 51, 52, 53
	Expr4           rules 54, 55
	Expr3           rules 56, 57
	Expr2           rules 58, 59
	Expr1           rules 60, 61
	Expr            rules 62, 63
	ListExpr        rules 64, 65, 66
	AddOp           rules 67, 68
	MulOp           rules 69, 70, 71
	RelOp           rules 72, 73, 74, 75, 76, 77

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 37)

	'['            reduce using rule 37
	'[]'           reduce using rule 37
	L_Ident        reduce using rule 37


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 6

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 14
	Type           goto state 7

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 36)

	'[]'           shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 12

State 8

	Type -> 'boolean' .                                 (rule 34)

	'['            reduce using rule 34
	'[]'           reduce using rule 34
	L_Ident        reduce using rule 34


State 9

	Type -> 'int' .                                     (rule 32)

	'['            reduce using rule 32
	'[]'           reduce using rule 32
	L_Ident        reduce using rule 32


State 10

	Type -> 'string' .                                  (rule 33)

	'['            reduce using rule 33
	'[]'           reduce using rule 33
	L_Ident        reduce using rule 33


State 11

	Type -> 'void' .                                    (rule 35)

	'['            reduce using rule 35
	'[]'           reduce using rule 35
	L_Ident        reduce using rule 35


State 12

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 15


State 13

	Type -> Type '[]' .                                 (rule 36)

	'['            reduce using rule 36
	'[]'           reduce using rule 36
	L_Ident        reduce using rule 36


State 14

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 15

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 16
	ListArg        goto state 17
	Type           goto state 18

State 16

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 21


State 17

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 20


State 18

	Arg -> Type . Ident                                 (rule 8)
	Type -> Type . '[]'                                 (rule 36)

	'[]'           shift, and enter state 13
	L_Ident        shift, and enter state 2

	Ident          goto state 19

State 19

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 20

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 24

	Block          goto state 23

State 21

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'void'         shift, and enter state 11
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 16
	ListArg        goto state 22
	Type           goto state 18

State 22

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 23

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'boolean'      reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	L_Ident        reduce using rule 5
	%eof           reduce using rule 5


State 24

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'-'            shift, and enter state 41
	';'            shift, and enter state 42
	'boolean'      shift, and enter state 8
	'false'        shift, and enter state 43
	'for'          shift, and enter state 44
	'if'           shift, and enter state 45
	'int'          shift, and enter state 9
	'new'          shift, and enter state 46
	'return'       shift, and enter state 47
	'string'       shift, and enter state 10
	'true'         shift, and enter state 48
	'void'         shift, and enter state 11
	'while'        shift, and enter state 49
	'{'            shift, and enter state 24
	'}'            reduce using rule 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 50
	L_quoted       shift, and enter state 51

	Ident          goto state 25
	Integer        goto state 26
	String         goto state 27
	Block          goto state 28
	ListStmt       goto state 29
	Stmt           goto state 30
	Type           goto state 31
	Expr6          goto state 32
	Expr5          goto state 33
	Expr4          goto state 34
	Expr3          goto state 35
	Expr2          goto state 36
	Expr1          goto state 37
	Expr           goto state 38

State 25

	Stmt -> Ident . '++' ';'                            (rule 19)
	Stmt -> Ident . '--' ';'                            (rule 20)
	Type -> Ident .                                     (rule 37)
	Expr6 -> Ident .                                    (rule 41)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 46)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	'('            shift, and enter state 87
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	'++'           shift, and enter state 88
	'-'            reduce using rule 41
	'--'           shift, and enter state 89
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 37
	'||'           reduce using rule 41
	L_Ident        reduce using rule 37


State 26

	Expr6 -> Integer .                                  (rule 42)
